Removes SBT steps from ubuntu-quickstart; adds GRADLE_OPTS
ubuntu-quickstart included SBT steps which aren't needed, especially as
the bin scripts implicitly run gradle. Added GRADLE_OPTS to both mac and
ubuntu quick starts.